clean up nav bar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,3 +17,12 @@
 .no-left-padding {
     padding-left: 0 !important;
 }
+
+.results-block{
+    display: inline-block;
+    margin-bottom: 1rem;
+}
+
+.logout-button{
+    margin-right: 5px;
+}
