Add functions for searching a friend and more stuff

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to the Finanace Tracker app</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<p>Create a welcome page</p>
 
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+
