--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -10,10 +10,18 @@
           <tr>
             <td><strong>Name: </strong><%= friend.full_name %></td>
             <td><strong>Email: </strong><%= friend.email %></td>
-            <td><strong>Actions: </strong><%= link_to "View profile", '#', class: "btn btn-small btn-success" %>
-                <%= link_to 'Follow friend?', '#', class: "btn btn-xs btn-success", method: :post %></td>
+            <td><strong>Actions: </strong><%= link_to "View profile", user_path(friend), class: "btn btn-small btn-success" %>
+              <% if current_user.not_friends_with?(friend.id)%>
+                <%= link_to 'Follow friend?', friendships_path(friend: friend), class: "btn btn-xs btn-success", method: :post %>
+              <% else %>
+                <span class="badge badge-secondary">
+                  You are friends
+                </span>
+              <%end%>
+            </td>
           </tr>
         <% end %>
       </tbody>  
     </table>
+  </div>
 <% end %>
